Frameworks/gin-microservice/kubernetes/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gin-microservice
  labels:
    app: gin-microservice
    tier: service
spec:
  # use NodePort here to be able to access a port on each node
  type: NodePort
  ports:
  - port: 9090
  selector:
    app: gin-microservice
